fixed latex errors and figsizes

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -353,7 +353,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 % /*}}}*/
 
 % == Patents ==
-@misc{wickersham1960artificial,
+@misc{wickersham1960artificial,/*{{{*/
   title={Artificial dielectric polarizer},
   author={Wickersham Jr Arthur F},
   url={http://www.google.com/patents/US2921312},
@@ -398,7 +398,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Google Patents},
   note={US Patent 6,875,544}
 }
-
+/*}}}*/
 
 % == Sources metamaterial theory ==
 %  -- books --/*{{{*/
@@ -578,8 +578,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={APS}
 }
 /*}}}*/
-
-
 
 %  -- homogenisation - older  -- 
 @article{nicolson1970measurement,
