--- a/t.tex
+++ b/t.tex
@@ -1,7 +1,7 @@
-\documentclass[letterpaper,12pt]{report}
+\documentclass[a4paper,12pt]{report}
 \usepackage[utf8]{inputenc} 
-%\usepackage[top=2.cm, bottom=2cm, left=2cm, right=2cm]{geometry} 
-\usepackage[top=3cm, bottom=3cm, left=2.5cm, right=2.5cm]{geometry} 
+%\usepackage[top=3cm, bottom=3cm, left=2.5cm, right=2.5cm]{geometry} 
+\usepackage[top=3cm, bottom=3cm, left=.5cm, right=.5cm, paperwidth=17.0cm, paperheight=29.7cm]{geometry}  %% DEBUG
 \usepackage{mathrsfs} 
 \usepackage{palatino} 
 \usepackage[font=it]{caption}
@@ -38,20 +38,20 @@
 
 
 \begin{document}
-\input{title.tex}
-\tableofcontents
-
-\chapter{Introduction}
-\input{intro.tex}
-
-\chapter{Theory}
-\input{theory.tex}
-
-\chapter{Numerical methods}
-\input{numeric.tex}
-
-\chapter{Experimental methods}
-\input{expe.tex}
+%\input{title.tex}
+%\tableofcontents
+%
+%\chapter{Introduction}
+%\input{intro.tex}
+%
+%\chapter{Theory}
+%\input{theory.tex}
+%
+%\chapter{Numerical methods}
+%\input{numeric.tex}
+%
+%\chapter{Experimental methods}
+%\input{expe.tex}
 
 \chapter{Results}
 \input{result.tex}
