--- a/theory.tex
+++ b/theory.tex
@@ -1187,7 +1187,7 @@ Theories of dielectric behaviour of nonhomogeneous composites have been develope
 
 %}}}
 \paragraph{Synthesis of nonresonant sub-wavelength structures} %{{{ ====================== OK
-\begin{figure}[h] \caption{Three examples of artificial dielectrics designs patented half a century ago: \textbf{(a)} sheets containing cut wires of alternating orientation and resonance frequency, enabling to manipulate microwave polarisation, \textbf{(b)} cross-section through a lightweight lens of 3 m diameter designed for 50-500 MHz radio waves, made of partially metallized plastic layers, \textbf{(c)} artificial dielectric made of non-resonant cut wires arranged into a nearly isotropic 3-D lattice. Drawings adapted from patent applications \cite{wickersham1960artificial},  \cite{anderson1967artificial} and \cite{hannan1966artificial}, respectively.} \label{fg_phc_patents} \label{fg_mm_patents} \centering \includegraphics[width=\textwidth]{img/patents/mm_patents.pdf} \end{figure}
+\begin{figure}[h] \caption{Three examples of artificial dielectrics designs patented half a century ago: \textbf{(a)} sheets containing cut wires of alternating orientation and resonance frequency, enabling to manipulate microwave polarisation, \textbf{(b)} cross-section through a lightweight lens of 3 m diameter designed for 50-500 MHz radio waves, made of partially metallized plastic layers, \textbf{(c)} artificial dielectric made of non-resonant cut wires arranged into a nearly isotropic 3-D lattice. Drawings adapted from patent applications \cite{wickersham1960artificial},  \cite{anderson1967artificial} and \cite{hannan1966artificial}, respectively.} \label{fg_mm_patents} \centering \includegraphics[width=\textwidth]{img/patents/mm_patents.pdf} \end{figure}
 
 The design of inhomogeneous structures that could be treated as homogeneous with some desired properties has also a surprisingly long history. 
 
@@ -1366,12 +1366,12 @@ Even more unfortunate is to associate the concept of MMs with one iconic design 
 to a topic such as longitudinally modulated waveguide filters.
 
 %}}}
-\paragraph{Metamaterials as all structures being subject to homogenisation} %{{{
-With the criteria of wavelength or energy localisation leaving many structures in the "grey zone", and the phase-advance criterion being rigorous however at most marginally related to the flow of energy, the author proposes to adopt another criterion based solely on one's subjective decision on how each structure is characterized. 
+\paragraph{Metamaterials as all periodic structures treated as homogeneous} %{{{
+With the criteria of wavelength or energy localisation leaving many structures in the "grey zone", and the phase-advance criterion being rigorous, but of little practical use, the author proposes to adopt another criterion based solely on one's subjective decision on how each structure is characterized. 
 
 The unifying concept of virtually all MM studies is to describe \textit{how} the wave propagates though them. Their overwhelmingly complicated electromagnetic interaction is approximated by \textit{homogenization}, i.e. by finding such properties of a homogeneous medium that would behave in similar way.
 
-In contrast, the PhC research focuses on \textit{whether} the wave can propagate at all. When a mirror, filter, waveguide cladding or other structure with a band gap is designed, it is important to prevent the light from propagating rather than to homogenize the structure. 
+In contrast, the PhC research focuses on \textit{whether} the wave can propagate at all. When a mirror, filter, waveguide cladding or other structure with a band gap is designed, it is important to prevent the light from propagating rather than to achieve some desired effective parameters for the Bloch wave. 
 
 This also justifies denoting MMs and PhCs as two different \textit{paradigms} rather than two distinct \textit{classes} of periodic structures, and it is the reason why the neutral term of \textit{periodic structure} is used in this thesis. 
 
